[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drlib"
version = "1.1.0"
description = "Ferromagnetic-resonance (FMR) spectroscopy, CPW field modelling, and 2-D REXS simulation."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sina Mehboodi" }
]
keywords = [
    "FMR", "ferromagnetic resonance", "spectroscopy",
    "coplanar waveguide", "CPW",
    "REXS", "skyrmion", "helical", "magnetism"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "pandas>=1.4",
    "lmfit>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
    "nbformat",
    "nbconvert",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
include = ["drlib*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:matplotlib",
]
